--- a/configs/cfg.yml
+++ b/configs/cfg.yml
@@ -1,18 +1,18 @@
 MODEL:
   DEVICE_ID:      ('0')
   NAME:           'volo_d1'
-  PRETRAINED:      True
-  PRETRAIN_PATH:   '.../volo/checkpoints/d1_224_84.2.pth.tar'
-  NECK :           'no'
+  PRETRAINED:     True
+  PRETRAIN_PATH:  '.../checkpoints/d1_224_84.2.pth.tar'
+  NECK :           'off'
 
 
 LOSS:
   TRIPLET_LOSS:    True
-  CENTER_LOSS:     True
+  CENTER_LOSS:     False
 
 
 INPUT:
-  ROOT_DIR:       ('.../data')
+  ROOT_DIR:       ('.../data/')
   SIZE_TRAIN:     [224, 224]
   SIZE_TEST:      [224, 224]
 
@@ -21,7 +21,7 @@ DATALOADER:
 
 SOLVER:
   OPTIMIZER_NAME:     SGD
-  MAX_EPOCHS:         100
+  MAX_EPOCHS:         2
   CHECKPOINT_PERIOD:  10
   LOG_PERIOD:         10
   BASE_LR:            3e-4
